--- a/UniversalSportsHub/Web.config
+++ b/UniversalSportsHub/Web.config
@@ -9,8 +9,18 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-UniversalSportsHub-20170317012944.mdf;Initial Catalog=aspnet-UniversalSportsHub-20170317012944;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="universalsportsdb" connectionString="Data Source={localhost};User ID={raj};Password={root};pooling=true;min pool size=5;Max Pool Size=60"
+      providerName="Oracle.DataAccess.Client" />
+    <add name="uniConnectionString" connectionString="Data Source=localhost;Persist Security Info=True;User ID=raj;Password=root;Unicode=True"
+      providerName="System.Data.OracleClient" />
+    <add name="unicon" connectionString="Data Source=localhost;Persist Security Info=True;User ID=raj;Password=root;Unicode=True"
+      providerName="System.Data.OracleClient" />
+    <add name="ConnectionString" connectionString="Data Source=localhost;Persist Security Info=True;User ID=raj;Password=root;Unicode=True"
+      providerName="System.Data.OracleClient" />
+    <add name="ConnectionString1" connectionString="Data Source=localhost;User ID=raj;Unicode=True"
+      providerName="System.Data.OracleClient" />
+    <add name="ConnectionString2" connectionString="Data Source=localhost;User ID=raj;Password=root;Unicode=True"
+      providerName="System.Data.OracleClient" />
   </connectionStrings>
   <system.web>
     <authentication mode="None" />
@@ -60,11 +70,17 @@
         <add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" />
       </providers>
     </sessionState>
+    <httpModules>
+      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
+    </httpModules>
   </system.web>
   <system.webServer>
     <modules>
       <remove name="FormsAuthentication" />
+      <remove name="ApplicationInsightsWebTracking" />
+      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
+    <validation validateIntegratedModeConfiguration="false" />
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
